--- a/hit.tex
+++ b/hit.tex
@@ -1,4 +1,5 @@
 \begin{figure}
+\begin{center}
 \begin{tabular}{lcl}
 $t_{H}$ & = & $\cdots\;\vert\;^{T}HS\;t_{S}\;\vert\;^{T}HM^{T}\;t_{M}$ \\
 $v_{H}$ & = & $\cdots\;\vert\;^{L}HS\;v_{S}\;\vert\;^{\forall X.T}HS\;v_{S}\;\vert\;^{\forall X.T}HM^{\forall X.T}\;v_{M}$ \\
@@ -9,6 +10,7 @@ $E_{H}$ & = & $\cdots\;\vert\;\mathtt{if0}\;(^{T}MH^{T}\;E_{H})\;t_{M}\;t_{M}\;\
 && $\vert\;o\;(SH^{T}\;E_{H})\;t_{S}\;\vert\;o\;v_{S}\;(SH^{T}\;E_{H})$ \\
 && $\vert\;f\;(SH^{T}\;E_{H})\;\vert\;f\;(^{T}MH^{T}\;E_{H})$
 \end{tabular}
+\end{center}
 \caption{Haskell interoperation terms}
 \label{fig:hit}
 \end{figure}
