--- a/model.tex
+++ b/model.tex
@@ -5,7 +5,9 @@
 \input{ht.tex}
 \input{hit.tex}
 \input{htr.tex}
+\input{hitr.tex}
 \input{hos.tex}
+\input{hios.tex}
 \input{st.tex}
 \input{str.tex}
 \input{sos.tex}
