Going to try removing the tabbing for Haskell.

--- a/hcos.tex
+++ b/hcos.tex
@@ -12,6 +12,6 @@ $\mathscr{E}[\mathtt{snd}\;(\mathtt{pair}\;t_{H}^{1}\;t_{H}^{2})]_{H}$ & $\right
 $\mathscr{E}[(\Lambda X.t_{H})\;[T]]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}[X/T]]$
 \end{tabular}
 \end{center}
-\caption{Haskell operational semantics}
-\label{fig:hos}
+\caption{Haskell core operational semantics}
+\label{fig:hcos}
 \end{figure}
