--- a/hct.tex
+++ b/hct.tex
@@ -11,6 +11,6 @@ $X$ & = & Type variables \\
 $E_{H}$ & = & $[\,]_{H}\;\vert\;E_{H}\;t_{H}\;\vert\;\mathtt{if0}\;E_{H}\;t_{H}\;t_{H}\;\vert\;o\;E_{H}\;t_{H}\;\vert\;o\;v_{H}\;E_{H}\;\vert\;f\;E_{H}\;\vert\;E_{H}\;[T]$
 \end{tabular}
 \end{center}
-\caption{Haskell terms}
-\label{fig:ht}
+\caption{Haskell core terms}
+\label{fig:hct}
 \end{figure}
