--- a/hctr.tex
+++ b/hctr.tex
@@ -37,6 +37,6 @@
 \quad
 \frac{\Gamma\vdash_{H}t_{H}:\forall X.T_{2}\quad\Gamma\vdash_{H}T_{1}}{\Gamma\vdash_{H}t_{H}\;[T_{1}]:T_{2}[X/T_{1}]}
 \]
-\caption{Haskell type relations}
-\label{htr}
+\caption{Haskell core type relations}
+\label{hctr}
 \end{figure}
