--- a/model.tex
+++ b/model.tex
@@ -2,13 +2,16 @@
 \usepackage{mathrsfs}
 \usepackage{setspace}
 \begin{document}
-\input{ht.tex}
+\input{hct.tex}
+\input{hctr.tex}
+\input{hcos.tex}
 \input{hit.tex}
-\input{htr.tex}
 \input{hitr.tex}
-\input{hos.tex}
 \input{hios.tex}
-\input{st.tex}
-\input{str.tex}
-\input{sos.tex}
+\input{sct.tex}
+\input{sctr.tex}
+\input{scos.tex}
+\input{sit.tex}
+\input{sitr.tex}
+\input{sios.tex}
 \end{document}
