--- a/sctr.tex
+++ b/sctr.tex
@@ -27,11 +27,6 @@
 \quad
 \frac{\Gamma\vdash_{S}t_{S}:TST}{\Gamma\vdash_{S}p\;t_{S}:TST}
 \]
-\[
-\frac{\Gamma\vdash_{H}t_{H}:T\quad\Gamma\vdash_{H}T}{\Gamma\vdash_{S}\;SH^{T}\;t_{H}:TST}
-\quad
-\frac{\Gamma\vdash_{M}t_{M}:T\quad\Gamma\vdash_{M}T}{\Gamma\vdash_{S}\;SM^{T}\;t_{M}:TST}
-\]
-\caption{Scheme type relations}
-\label{str}
+\caption{Scheme core type relations}
+\label{sctr}
 \end{figure}
