--- a/sios.tex
+++ b/sios.tex
@@ -1,5 +1,6 @@
 \begin{figure}
 \onehalfspacing
+\begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[SH^{N}\;\overline{n}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
 $\mathscr{E}[SH^{\forall X.T}\;(^{\forall X.T}HS\;v_{S})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}]$ \\
@@ -17,6 +18,7 @@ $\mathscr{E}[SM^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.t_{M})]_{S}$ & $\
 && $(^{T_{1}}MS\;x_{2})))]$ \\
 $\mathscr{E}[(SM^{(T_{1},T_{2})}\;(\mathtt{pair}\;v_{M}^{1}\;v_{M}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{pair}\;(SM^{T_{1}}\;v_{M}^{1})\;(SM^{T_{2}}\;v_{M}^{2})]$
 \end{tabular}
+\end{center}
 \caption{Scheme interoperation operational semantics}
 \label{fig:sios}
 \end{figure}
