Finished rough draft.

--- a/hct.tex
+++ b/hct.tex
@@ -1,14 +1,15 @@
 \begin{figure}
+\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
-$t_{H}$ & = & $x\;\vert\;v_{H}\;\vert\;t_{H}\;t_{H}\;\vert\;\mathtt{if0}\;t_{H}\;t_{H}\;t_{H}\;\vert\;o\;t_{H}\;t_{H}\;\vert\;f\;t_{H}\;\vert\;t_{H}\;[T]$ \\
+$t_{H}$ & = & $x\;\vert\;v_{H}\;\vert\;t_{H}\;t_{H}\;\vert\;t_{H}\;[T]\;\vert\;\mathtt{if0}\;t_{H}\;t_{H}\;t_{H}\;\vert\;o\;t_{H}\;t_{H}\;\vert\;f\;t_{H}$ \\
 $x$ & = & Variables \\
-$v_{H}$ & = & $\lambda x:T.t_{H}\;\vert\;\Lambda X.t_{H}\;\vert\;\overline{n}\;\vert\;\mathtt{pair}\;t_{H}\;t_{H}$ \\
+$v_{H}$ & = & $\lambda x:T.t_{H}\;\vert\;\Lambda X.t_{H}\;\vert\;\mathtt{pair}\;t_{H}\;t_{H}\;\vert\;\overline{n}$ \\
 $o$ & = & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
 $f$ & = & $\mathtt{fst}\;\vert\;\mathtt{snd}$ \\
 $T$ & = & $N\;\vert\;X\;\vert\;T\rightarrow T\;\vert\;\forall X.T\;\vert\;(T,T)$ \\
 $X$ & = & Type variables \\
-$E_{H}$ & = & $[\,]_{H}\;\vert\;E_{H}\;t_{H}\;\vert\;\mathtt{if0}\;E_{H}\;t_{H}\;t_{H}\;\vert\;o\;E_{H}\;t_{H}\;\vert\;o\;v_{H}\;E_{H}\;\vert\;f\;E_{H}\;\vert\;E_{H}\;[T]$
+$E_{H}$ & = & $[\,]_{H}\;\vert\;E_{H}\;t_{H}\;\vert\;E_{H}\;[T]\;\vert\;\mathtt{if0}\;E_{H}\;t_{H}\;t_{H}\;\vert\;o\;E_{H}\;t_{H}\;\vert\;o\;v_{H}\;E_{H}\;\vert\;f\;E_{H}$
 \end{tabular}
 \end{center}
 \caption{Haskell core terms}
