--- a/hios.tex
+++ b/hios.tex
@@ -14,11 +14,11 @@ $\mathscr{E}[^{T}HS\;(SH^{T}\;t_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}]
 $\mathscr{E}[^{T}HS\;(SH^{T^{a}}\;t_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}]$ \\
 $\mathscr{E}[^{T^{a}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T^{a}}HS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})]$ \\
 && $(v_{S}\neq SH^{T^{a}}\;t_{H})$ \\
-$\mathscr{E}[^{(T_{1},T_{2})}HS\;(\mathtt{pair}\;t_{S}^{1}\;t_{S}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{pair}\;(^{T_{1}}HS\;t_{S}^{1})\;(^{T_{2}}HS\;t_{S}^{2})]$ \\
+$\mathscr{E}[^{(T_{1},T_{2})}HS\;(\mathtt{pair}\;v_{S}^{1}\;v_{S}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{pair}\;(^{T_{1}}HS\;v_{S}^{1})\;(^{T_{2}}HS\;v_{S}^{2})]$ \\
 $\mathscr{E}[^{(T_{1},T_{2})}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{(T_{1},T_{2})}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;pair"})]$ \\
-&& $(v_{S}\neq\mathtt{pair}\;t_{S}\;t_{S})$ \\
+&& $(v_{S}\neq\mathtt{pair}\;v_{S}\;v_{S})$ \\
 $\mathscr{E}[^{N}HM^{N}\;\overline{n}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
-$\mathscr{E}[(^{\forall X.T_{1}}HM^{\forall X.T_{1}}\;v_{M})\;[T_{2}]]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[X/T_{2}]}HM^{T_{1}[X/T_{2}]}\;v_{M}]$ \\
+$\mathscr{E}[(^{\forall X.T_{1}}HM^{\forall X.T_{1}}\;v_{M})\;[T_{2}]]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[X/T_{2}]}HM^{T_{1}[X/T_{2}]}\;(v_{M}\;[T_{2}])]$ \\
 $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HM^{T_{1}\rightarrow T_{2}}\;v_{M}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\lambda x:T_{1}.(^{T_{2}}HM^{T_{2}}\;(v_{M}\;(^{T_{1}}MH^{T_{1}}\;x)))]$ \\
 $\mathscr{E}[^{(T_{1},T_{2})}HM^{(T_{1},T_{2})}\;(\mathtt{pair}\;t_{M}^{1}\;t_{M}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{pair}\;(^{T_{1}}HM^{T_{1}}\;t_{M}^{1})\;(^{T_{2}}HM^{T_{2}}\;t_{M}^{2})]$
 \end{tabular}
