--- a/model.tex
+++ b/model.tex
@@ -8,6 +8,12 @@
 \input{hit.tex}
 \input{hitr.tex}
 \input{hios.tex}
+\input{mct.tex}
+\input{mctr.tex}
+\input{mcos.tex}
+\input{mit.tex}
+\input{mitr.tex}
+\input{mios.tex}
 \input{sct.tex}
 \input{sctr.tex}
 \input{scos.tex}
