--- a/hcos.tex
+++ b/hcos.tex
@@ -2,7 +2,7 @@
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
-$\mathscr{E}[(\lambda x:T_{1}.t_{H}^{1})\;t_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{1}[x/t_{H}^{2}]]$ \\
+$\mathscr{E}[(\lambda x:T.t_{H}^{1})\;t_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{1}[x/t_{H}^{2}]]$ \\
 $\mathscr{E}[\mathtt{if0}\;\overline{0}\;t_{H}^{1}\;t_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{1}]$ \\
 $\mathscr{E}[\mathtt{if0}\;\overline{n}\;t_{H}^{1}\;t_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{2}]\;(n\neq0)$ \\
 $\mathscr{E}[+\;\overline{n_{1}}\;\overline{n_{2}}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
