Applied fixes according to my review last night.  Second draft.

--- a/hcos.tex
+++ b/hcos.tex
@@ -3,13 +3,13 @@
 \begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[(\lambda x:T.t_{H}^{1})\;t_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{1}[x/t_{H}^{2}]]$ \\
+$\mathscr{E}[(\Lambda X.t_{H})\;[T]]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}[X/T]]$ \\
 $\mathscr{E}[\mathtt{if0}\;\overline{0}\;t_{H}^{1}\;t_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{1}]$ \\
 $\mathscr{E}[\mathtt{if0}\;\overline{n}\;t_{H}^{1}\;t_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{2}]\;(n\neq0)$ \\
 $\mathscr{E}[+\;\overline{n_{1}}\;\overline{n_{2}}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
 $\mathscr{E}[-\;\overline{n_{1}}\;\overline{n_{2}}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{(max(n_{1}-n_{2},0)}]$ \\
 $\mathscr{E}[\mathtt{fst}\;(\mathtt{pair}\;t_{H}^{1}\;t_{H}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{1}]$ \\
-$\mathscr{E}[\mathtt{snd}\;(\mathtt{pair}\;t_{H}^{1}\;t_{H}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{2}]$ \\
-$\mathscr{E}[(\Lambda X.t_{H})\;[T]]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}[X/T]]$
+$\mathscr{E}[\mathtt{snd}\;(\mathtt{pair}\;t_{H}^{1}\;t_{H}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}^{2}]$
 \end{tabular}
 \end{center}
 \caption{Haskell core operational semantics}
