--- a/mit.tex
+++ b/mit.tex
@@ -1,11 +1,11 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$t_{M}$ & = & $\cdots\;\vert\;^{T}MS\;t_{S}\;\vert\;^{T}MH^{T}\;t_{H}$ \\
-$v_{M}$ & = & $\cdots\;\vert\;^{L}MS\;v_{S}\;\vert\;^{\forall X.T}MS\;v_{S}\;\vert\;^{\forall X.T}MH^{\forall X.T}\;t_{H}$ \\
-$T$ & = & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
-$a$ & = & Type annotations \\
-$E_{M}$ & = & $\cdots\;\vert\;^{T}HM^{T}\;E_{M}\;\vert\;SM^{T}\;E_{M}$
+$t_{M}$ & $=$ & $\cdots\;\vert\;^{T}MS\;t_{S}$ \\
+$v_{M}$ & $=$ & $\cdots\;\vert\;^{T}MH^{T}\;t_{H}\;\vert\;^{L}MS\;v_{S}\;\vert\;^{\forall X.T}MS\;v_{S}$ \\
+$T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
+$a$ & $=$ & Type annotations (a, b, \ldots) \\
+$E_{M}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;E_{M}\;\vert\;SM^{T}\;E_{M}$
 \end{tabular}
 \end{center}
 \caption{ML interoperation terms}
