--- a/sit.tex
+++ b/sit.tex
@@ -1,8 +1,8 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$t_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;t_{H}\;\vert\;SM^{T}\;t_{M}$ \\
-$v_{S}$ & $=$ & $\cdots\;\vert\;SH^{T^{a}}\;t_{H}\;\vert\;SM^{T^{a}}\;v_{M}$ \\
+$t_{S}$ & $=$ & $\cdots\;\vert\;SM^{T}\;t_{M}$ \\
+$v_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;t_{H}\;\vert\;SM^{T^{a}}\;v_{M}$ \\
 $E_{S}$ & $=$ & $\cdots\;\vert\;^{T}HS\;E_{S}\;\vert\;^{T}MS\;E_{S}$
 \end{tabular}
 \end{center}
