--- a/hit.tex
+++ b/hit.tex
@@ -1,14 +1,14 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$t_{H}$ & = & $\cdots\;\vert\;^{T}HS\;t_{S}\;\vert\;^{T}HM^{T}\;t_{M}$ \\
-$v_{H}$ & = & $\cdots\;\vert\;^{L}HS\;v_{S}\;\vert\;^{\forall X.T}HS\;v_{S}\;\vert\;^{\forall X.T}HM^{\forall X.T}\;v_{M}$ \\
-$T$ & = & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
-$a$ & = & Type annotations \\
-$E_{H}$ & = & $\cdots\;\vert\;\mathtt{if0}\;(^{T}MH^{T}\;E_{H})\;t_{M}\;t_{M}\;\vert\;\mathtt{if0}\;(SH^{T}\;E_{H})\;t_{S}\;t_{S}$ \\
+$t_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;t_{M}\;\vert\;^{T}HS\;t_{S}$ \\
+$v_{H}$ & $=$ & $\cdots\;\vert\;^{\forall X.T}HM^{\forall X.T}\;v_{M}\;\vert\;^{L}HS\;v_{S}\;\vert\;^{\forall X.T}HS\;v_{S}$ \\
+$T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
+$a$ & $=$ & Type annotations (a, b, \ldots) \\
+$E_{H}$ & $=$ & $\cdots\;\vert\;\mathtt{if0}\;(^{T}MH^{T}\;E_{H})\;t_{M}\;t_{M}\;\vert\;\mathtt{if0}\;(SH^{T}\;E_{H})\;t_{S}\;t_{S}$ \\
 && $\vert\;o\;(^{T}MH^{T}\;E_{H})\;t_{M}\;\vert\;o\;v_{M}\;(^{T}MH^{T}\;E_{H})$ \\
 && $\vert\;o\;(SH^{T}\;E_{H})\;t_{S}\;\vert\;o\;v_{S}\;(SH^{T}\;E_{H})$ \\
-&& $\vert\;f\;(SH^{T}\;E_{H})\;\vert\;f\;(^{T}MH^{T}\;E_{H})$
+&& $\vert\;f\;(^{T}MH^{T}\;E_{H})\;\vert\;f\;(SH^{T}\;E_{H})$
 \end{tabular}
 \end{center}
 \caption{Haskell interoperation terms}
