--- a/mctr.tex
+++ b/mctr.tex
@@ -4,24 +4,24 @@
 \quad
 \Gamma\vdash_{M}X
 \quad
-\frac{\Gamma\vdash_{M}T_{1}[T^{a}_{i}/T_{i}]\quad\Gamma\vdash_{M}T_{2}}{\Gamma\vdash_{M}T_{1}\rightarrow T_{2}}
+\frac{\Gamma\vdash_{M}T_{1}\quad\Gamma\vdash_{M}T_{2}}{\Gamma\vdash_{M}T_{1}\rightarrow T_{2}}
 \]
 \[
 \frac{\Gamma ,X\vdash_{M}T}{\Gamma\vdash_{M}\forall X.T}
 \quad
 \frac{\Gamma\vdash_{M}T_{1}\quad\Gamma\vdash_{M}T_{2}}{\Gamma\vdash_{M}(T_{1},T_{2})}
 \quad
-\Gamma\vdash_{M}\overline{n}:N
-\quad
 \frac{x:T\in\Gamma}{\Gamma\vdash_{M}x:T}
+\quad
+\Gamma\vdash_{M}\overline{n}:N
 \]
 \[
 \frac{\Gamma,x:T_{1}\vdash_{M}t_{M}:T_{2}\quad\Gamma\vdash_{M}T_{1}}{\Gamma\vdash_{M}\lambda x:T_{1}.t_{M}:T_{1}\rightarrow T_{2}}
 \quad
-\frac{\Gamma\vdash_{M}t_{M}:T}{\Gamma\vdash_{M}\Lambda X.t_{M}:\forall X.T}
+\frac{\Gamma,X\vdash_{M}t_{M}:T}{\Gamma\vdash_{M}\Lambda X.t_{M}:\forall X.T}
 \]
 \[
-\frac{\Gamma\vdash_{M}t_{M}^{1}:T_{1}\rightarrow T_{2}\quad\Gamma\vdash_{M}t_{M}^{1}:T_{1}}{\Gamma\vdash_{M}t_{M}^{1}\;t_{M}^{2}:T_{2}}
+\frac{\Gamma\vdash_{M}t_{M}^{1}:T_{1}\rightarrow T_{2}\quad\Gamma\vdash_{M}t_{M}^{2}:T_{1}}{\Gamma\vdash_{M}t_{M}^{1}\;t_{M}^{2}:T_{2}}
 \quad
 \quad
 \frac{\Gamma\vdash_{M}t_{M}:\forall X.T_{2}\quad\Gamma\vdash_{M}T_{1}}{\Gamma\vdash_{M}t_{M}\;[T_{1}]:T_{2}[X/T_{1}]}
