--- a/scos.tex
+++ b/scos.tex
@@ -8,9 +8,9 @@ $\mathscr{E}[\mathtt{if0}\;v_{S}\;t_{S}^{1}\;t_{S}^{2}]_{S}$ & $\rightarrow$ & $
 $\mathscr{E}[+\;\overline{n_{1}}\;\overline{n_{2}}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
 $\mathscr{E}[-\;\overline{n_{1}}\;\overline{n_{2}}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{(max(n_{1}-n_{2},0)}]$ \\
 $\mathscr{E}[o\;v_{S}^{1}\;v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Not\;a\;number"}]$ \\
-&& $(v_{S}^{1}\neq\overline{n}\vee v_{S}^{2}\neq\overline{n})$ \\
-$\mathscr{E}[\mathtt{fst}\;(\mathtt{pair}\;t_{S}^{1}\;t_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[t_{S}^{1}]$ \\
-$\mathscr{E}[\mathtt{snd}\;(\mathtt{pair}\;t_{S}^{1}\;t_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[t_{S}^{2}]$ \\
+&& $(v_{S}^{1}\neq\overline{n}$ or $v_{S}^{2}\neq\overline{n})$ \\
+$\mathscr{E}[\mathtt{fst}\;(\mathtt{pair}\;v_{S}^{1}\;v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}^{1}]$ \\
+$\mathscr{E}[\mathtt{snd}\;(\mathtt{pair}\;v_{S}^{1}\;v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}^{2}]$ \\
 $\mathscr{E}[f\;v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Not\;a\;pair"}]$ \\
 && $(v_{S}\neq\mathtt{pair}\;t_{S}\;t_{S})$ \\
 $\mathscr{E}[\mathtt{nat?}\;\overline{n}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
@@ -19,7 +19,7 @@ $\mathscr{E}[\mathtt{pair?}\;(\mathtt{pair}\;v_{S}^{1}\;v_{S}^{2})]_{S}$ & $\rig
 $\mathscr{E}[\mathtt{pair?}\;v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]\;(v_{S}\neq\mathtt{pair}\;v_{S}\;v_{S})$ \\
 $\mathscr{E}[\mathtt{proc?}\;(\lambda x.t_{S})]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
 $\mathscr{E}[\mathtt{proc?}\;v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]\;(v_{S}\neq\lambda x.t_{S})$ \\
-$\mathscr{E}[\mathtt{wrong}\;\mathrm{string}]_{S}$ & $\rightarrow$ & $Error:\;string$
+$\mathscr{E}[\mathtt{wrong}\;\mathrm{string}]_{S}$ & $\rightarrow$ & Error: $\mathrm{string}$
 \end{tabular}
 \end{center}
 \caption{Scheme core operational semantics}
