--- a/hctr.tex
+++ b/hctr.tex
@@ -1,43 +1,47 @@
 \begin{figure}
 \[
-\Gamma\vdash_{H}N
+\frac{}{\Gamma\vdash_{H}N}
 \quad
-\Gamma\vdash_{H}X
+\frac{X\in\Gamma}{\Gamma\vdash_{H}X}
 \quad
 \frac{\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{H}T_{2}}{\Gamma\vdash_{H}T_{1}\rightarrow T_{2}}
-\]
-\[
+\quad
 \frac{\Gamma ,X\vdash_{H}T}{\Gamma\vdash_{H}\forall X.T}
 \quad
-\frac{\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{H}T_{2}}{\Gamma\vdash_{H}(T_{1},T_{2})}
+\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}[T]}
+\]
+\bigskip
+\[
+\frac{}{\Gamma\vdash_{H}\overline{n}:N}
+\quad
+\frac{}{\Gamma\vdash_{H}\mathtt{nil}:\forall X.[X]}
 \quad
 \frac{x:T\in\Gamma}{\Gamma\vdash_{H}x:T}
 \quad
-\Gamma\vdash_{H}\overline{n}:N
+\frac{\Gamma\vdash_{H}e_{H}:T\rightarrow T}{\Gamma\vdash_{H}\mathtt{fix}\;e_{H}:T}
 \]
 \[
-\frac{\Gamma,x:T_{1}\vdash_{H}t_{H}:T_{2}\quad\Gamma\vdash_{H}T_{1}}{\Gamma\vdash_{H}\lambda x:T_{1}.t_{H}:T_{1}\rightarrow T_{2}}
+\frac{\Gamma,x:T_{1}\vdash_{H}e_{H}:T_{2}\quad\Gamma\vdash_{H}T_{1}}{\Gamma\vdash_{H}\lambda x:T_{1}.e_{H}:T_{1}\rightarrow T_{2}}
 \quad
-\frac{\Gamma,X\vdash_{H}t_{H}:T}{\Gamma\vdash_{H}\Lambda X.t_{H}:\forall X.T}
+\frac{\Gamma,X\vdash_{H}e_{H}:T}{\Gamma\vdash_{H}\Lambda X.e_{H}:\forall X.T}
 \]
 \[
-\frac{\Gamma\vdash_{H}t_{H}^{1}:T_{1}\rightarrow T_{2}\quad\Gamma\vdash_{H}t_{H}^{2}:T_{1}}{\Gamma\vdash_{H}t_{H}^{1}\;t_{H}^{2}:T_{2}}
+\frac{\Gamma\vdash_{H}e_{H}^{1}:T_{1}\rightarrow T_{2}\quad\Gamma\vdash_{H}e_{H}^{2}:T_{1}}{\Gamma\vdash_{H}e_{H}^{1}\;e_{H}^{2}:T_{2}}
 \quad
-\quad
-\frac{\Gamma\vdash_{H}t_{H}:\forall X.T_{2}\quad\Gamma\vdash_{H}T_{1}}{\Gamma\vdash_{H}t_{H}\;[T_{1}]:T_{2}[X/T_{1}]}
+\frac{\Gamma\vdash_{H}e_{H}:\forall X.T_{2}\quad\Gamma\vdash_{H}T_{1}}{\Gamma\vdash_{H}e_{H}\;\lbrace T_{1}\rbrace:T_{2}[T_{1}/X]}
 \]
 \[
-\frac{\Gamma\vdash_{H}t_{H}^{1}:T_{1}\quad\Gamma\vdash_{H}t_{H}^{2}:T_{2}}{\Gamma\vdash_{H}\mathtt{pair}\;t_{H}^{1}\;t_{H}^{2}:(T_{1},T_{2})}
+\frac{\Gamma\vdash_{H}e_{H}^{1}:T\quad\Gamma\vdash_{H}e_{H}^{2}:[T]}{\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T]}
 \quad
-\frac{\Gamma\vdash_{H}t_{H}:(T_{1},T_{2})}{\Gamma\vdash_{H}\mathtt{fst}\;t_{H}:T_{1}}
+\frac{\Gamma\vdash_{H}e_{H}:[T]}{\Gamma\vdash_{H}\mathtt{hd}\;e_{H}:T}
 \quad
-\frac{\Gamma\vdash_{H}t_{H}:(T_{1},T_{2})}{\Gamma\vdash_{H}\mathtt{snd}\;t_{H}:T_{2}}
+\frac{\Gamma\vdash_{H}e_{H}:[T]}{\Gamma\vdash_{H}\mathtt{tl}\;e_{H}:[T]}
 \]
 \[
-\frac{\Gamma\vdash_{H}t_{H}^{1}:N\quad\Gamma\vdash_{H}t_{H}^{2}:T\quad\Gamma\vdash_{H}t_{H}^{3}:T}{\Gamma\vdash_{H}\mathtt{if0}\;t_{H}^{1}\;t_{H}^{2}\;t_{H}^{3}:T}
+\frac{\Gamma\vdash_{H}e_{H}^{1}:N\quad\Gamma\vdash_{H}e_{H}^{2}:T\quad\Gamma\vdash_{H}e_{H}^{3}:T}{\Gamma\vdash_{H}\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}:T}
 \quad
-\frac{\Gamma\vdash_{H}t_{H}^{1}:N\quad\Gamma\vdash_{H}t_{H}^{2}:N}{\Gamma\vdash_{H}o\;t_{H}^{1}\;t_{H}^{2}:N}
+\frac{\Gamma\vdash_{H}e_{H}^{1}:N\quad\Gamma\vdash_{H}e_{H}^{2}:N}{\Gamma\vdash_{H}o\;e_{H}^{1}\;e_{H}^{2}:N}
 \]
-\caption{Haskell core type relations}
+\caption{Haskell core typing rules}
 \label{hctr}
 \end{figure}
