--- a/sctr.tex
+++ b/sctr.tex
@@ -27,6 +27,6 @@
 \quad
 \frac{\Gamma\vdash_{S}t_{S}:TST}{\Gamma\vdash_{S}p\;t_{S}:TST}
 \]
-\caption{Scheme core type relations}
+\caption{Scheme core typing rules}
 \label{sctr}
 \end{figure}
