--- a/sitr.tex
+++ b/sitr.tex
@@ -4,6 +4,6 @@
 \quad
 \frac{\Gamma\vdash_{M}t_{M}:T[T^{a}_{i}/T_{i}]\quad\Gamma\vdash_{M}T}{\Gamma\vdash_{S}\;SM^{T}\;t_{M}:TST}
 \]
-\caption{Scheme interoperation type relations}
+\caption{Scheme interoperation typing rules}
 \label{sitr}
 \end{figure}
