--- a/hios.tex
+++ b/hios.tex
@@ -3,22 +3,22 @@
 \begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[^{N}HM^{N}\;\overline{n}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
-$\mathscr{E}[(^{\forall X.T_{1}}HM^{\forall X.T_{1}}\;(\Lambda X.t_{M}))\;[T_{2}]]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[X/T_{2}]}HM^{T_{1}[X/T_{2}]}\;((\Lambda X.t_{M})\;[T_{2}])]$ \\
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HM^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.t_{M})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}HM^{T_{2}}\;((\lambda x_{1}:T_{1}.t_{M})\;(^{T_{1}}MH^{T_{1}}\;x_{2})))]$ \\
-$\mathscr{E}[^{(T_{1},T_{2})}HM^{(T_{1},T_{2})}\;(\mathtt{pair}\;v_{M}^{1}\;v_{M}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{pair}\;(^{T_{1}}HM^{T_{1}}\;v_{M}^{1})\;(^{T_{2}}HM^{T_{2}}\;v_{M}^{2})]$ \\
+$\mathscr{E}[(^{\forall X.T_{1}}HM^{\forall X.T_{1}}\;(\Lambda X.e_{M}))\;\lbrace T_{2}\rbrace]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[T_{2}/X]}HM^{T_{1}[T_{2}/X]}\;((\Lambda X.e_{M})\;\lbrace T_{2}\rbrace)]$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HM^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{M})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}HM^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{M})\;(^{T_{1}}MH^{T_{1}}\;x_{2})))]$ \\
+$\mathscr{E}[^{[T]}HM^{[T]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{cons}\;(^{T}HM^{T}\;v_{M}^{1})\;(^{[T]}HM^{[T]}\;v_{M}^{2})]$ \\
 $\mathscr{E}[^{N}HS\;\overline{n}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
 $\mathscr{E}[^{N}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{N}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"})]$ \\
 && $(v_{S}\neq\overline{n})$ \\
-$\mathscr{E}[(^{\forall X.T_{1}}HS\;v_{S})\;[T_{2}]]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[X/T_{2}]}HS\;v_{S}]$ \\
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\lambda x_{1}.t_{S})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\lambda x_{2}:T_{1}[T^{a}_{i}/T_{i}].(^{T_{2}}HS\;((\lambda x_{1}.t_{S})\;(SH^{T_{1}}\;x_{2})))]$ \\
+$\mathscr{E}[(^{\forall X.T_{1}}HS\;v_{S})\;[T_{2}]]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[T_{2}/X]}HS\;v_{S}]$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\lambda x_{1}.e_{S})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\lambda x_{2}:T_{1}[T^{a}_{i}/T_{i}].(^{T_{2}}HS\;((\lambda x_{1}.e_{S})\;(SH^{T_{1}}\;x_{2})))]$ \\
 $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;function"})]$ \\
-&& $(v_{S}\neq\lambda x.t_{S})$ \\
-$\mathscr{E}[^{T}HS\;(SH^{T}\;t_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E}[t_{H}]$ \\
+&& $(v_{S}\neq\lambda x.e_{S})$ \\
+$\mathscr{E}[^{T}HS\;(SH^{T}\;e_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}]$ \\
 $\mathscr{E}[^{T^{a}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T^{a}}HS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})]$ \\
-&& $(v_{S}\neq SH^{T^{a}}\;t_{H})$ \\
-$\mathscr{E}[^{(T_{1},T_{2})}HS\;(\mathtt{pair}\;v_{S}^{1}\;v_{S}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{pair}\;(^{T_{1}}HS\;v_{S}^{1})\;(^{T_{2}}HS\;v_{S}^{2})]$ \\
-$\mathscr{E}[^{(T_{1},T_{2})}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{(T_{1},T_{2})}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;pair"})]$ \\
-&& $(v_{S}\neq\mathtt{pair}\;v_{S}\;v_{S})$
+&& $(v_{S}\neq SH^{T^{a}}\;e_{H})$ \\
+$\mathscr{E}[^{[T]}HS\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{cons}\;(^{T}HS\;v_{S}^{1})\;(^{[T]}HS\;v_{S}^{2})]$ \\
+$\mathscr{E}[^{[T]}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{[T]}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;list"})]$ \\
+&& $(v_{S}\neq\mathtt{cons}\;v_{S}\;v_{S})$
 \end{tabular}
 \end{center}
 \caption{Haskell interoperation operational semantics}
