--- a/hitr.tex
+++ b/hitr.tex
@@ -5,10 +5,10 @@
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}T^{a}}
 \]
 \[
-\frac{\Gamma\vdash_{S}t_{S}:TST\quad\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\;^{T}HS\;t_{S}:T[T^{a}_{i}/T_{i}]}
+\frac{\Gamma\vdash_{S}t_{S}:TST\quad\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\;^{T}HS\;t_{S}:T[T_{i}/T^{a}_{i}]}
 \quad
 \frac{\Gamma\vdash_{M}t_{M}:T_{2}\quad\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{M}T_{2}\quad T_{1}=T_{2}}{\Gamma\vdash_{H}\;^{T_{1}}HM^{T_{2}}\;t_{M}:T_{1}}
 \]
-\caption{Haskell interoperation type relations}
+\caption{Haskell interoperation typing rules}
 \label{hitr}
 \end{figure}
