--- a/mct.tex
+++ b/mct.tex
@@ -2,15 +2,15 @@
 \onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
-$t_{M}$ & = & $x\;\vert\;v_{M}\;\vert\;t_{M}\;t_{M}\;\vert\;t_{M}\;[T]\;\vert\;\mathtt{if0}\;t_{M}\;t_{M}\;t_{M}\;\vert\;\mathtt{pair}\;t_{M}\;t_{M}\;\vert\;o\;t_{M}\;t_{M}\;\vert\;f\;t_{M}$ \\
+$e_{M}$ & = & $x\;\vert\;v_{M}\;\vert\;e_{M}\;e_{M}\;\vert\;e_{M}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;e_{M}\;e_{M}\;e_{M}\;\vert\;\mathtt{cons}\;e_{M}\;e_{M}\;\vert\;o\;e_{M}\;e_{M}\;\vert\;f\;e_{M}$ \\
 $x$ & = & Variables \\
-$v_{M}$ & = & $\lambda x:T.t_{M}\;\vert\;\Lambda X.t_{M}\;\vert\;\mathtt{pair}\;v_{M}\;v_{M}\;\vert\;\overline{n}$ \\
+$v_{M}$ & = & $\lambda x:T.e_{M}\;\vert\;\Lambda X.e_{M}\;\vert\;\mathtt{cons}\;v_{M}\;v_{M}\;\vert\;\mathtt{nil}\;\vert\;\overline{n}$ \\
 $o$ & = & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
-$f$ & = & $\mathtt{fst}\;\vert\;\mathtt{snd}$ \\
-$T$ & = & $N\;\vert\;X\;\vert\;T\rightarrow T\;\vert\;\forall X.T\;\vert\;(T,T)$ \\
+$f$ & = & $\mathtt{hd}\;\vert\;\mathtt{tl}$ \\
+$T$ & = & $N\;\vert\;X\;\vert\;T\rightarrow T\;\vert\;\forall X.T\;\vert\;[T]$ \\
 $X$ & = & Type variables \\
-$E_{M}$ & = & $[\,]_{M}\;\vert\;E_{M}\;t_{M}\;\vert\;v_{M}\;E_{M}\;\vert\;E_{M}\;[T]\;\vert\;\mathtt{if0}\;E_{M}\;t_{M}\;t_{M}$ \\
-&& $\vert\;\mathtt{pair}\;E_{M}\;t_{M}\;\vert\;\mathtt{pair}\;v_{M}\;E_{M}\;\vert\;o\;E_{M}\;t_{M}\;\vert\;o\;v_{M}\;E_{M}\;\vert\;f\;E_{M}$
+$E_{M}$ & = & $[\,]_{M}\;\vert\;E_{M}\;e_{M}\;\vert\;v_{M}\;E_{M}\;\vert\;E_{M}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;E_{M}\;e_{M}\;e_{M}$ \\
+&& $\vert\;\mathtt{cons}\;E_{M}\;e_{M}\;\vert\;\mathtt{cons}\;v_{M}\;E_{M}\;\vert\;o\;E_{M}\;e_{M}\;\vert\;o\;v_{M}\;E_{M}\;\vert\;f\;E_{M}$
 \end{tabular}
 \end{center}
 \caption{ML core terms}
