--- a/mitr.tex
+++ b/mitr.tex
@@ -5,10 +5,10 @@
 \frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}T^{a}}
 \]
 \[
-\frac{\Gamma\vdash_{S}t_{S}:TST\quad\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\;^{T}MS\;t_{S}:T[T^{a}_{i}/T_{i}]}
+\frac{\Gamma\vdash_{S}t_{S}:TST\quad\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\;^{T}MS\;t_{S}:T[T_{i}/T^{a}_{i}]}
 \quad
 \frac{\Gamma\vdash_{H}t_{H}:T_{2}\quad\Gamma\vdash_{M}T_{1}\quad\Gamma\vdash_{H}T_{2}\quad T_{1}=T_{2}}{\Gamma\vdash_{M}\;^{T_{1}}MH^{T_{2}}\;t_{H}:T_{1}}
 \]
-\caption{ML interoperation type relations}
+\caption{ML interoperation typing rules}
 \label{mitr}
 \end{figure}
