--- a/sit.tex
+++ b/sit.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{lcl}
 $t_{S}$ & $=$ & $\cdots\;\vert\;SM^{T}\;t_{M}$ \\
 $v_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;t_{H}\;\vert\;SM^{T^{a}}\;v_{M}$ \\
-$E_{S}$ & $=$ & $\cdots\;\vert\;^{T}HS\;E_{S}\;\vert\;^{T}MS\;E_{S}$
+$E_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;E_{H}\;\vert\;SM^{T}\;E_{M}$
 \end{tabular}
 \end{center}
 \caption{Scheme interoperation terms}
