Third draft.  Made changes according to last meeting with Clements.

--- a/hit.tex
+++ b/hit.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$t_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;e_{M}\;\vert\;^{T}HS\;e_{S}$ \\
+$e_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;e_{M}\;\vert\;^{T}HS\;e_{S}$ \\
 $T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
 $a$ & $=$ & Type annotations (a, b, \ldots) \\
 $E_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;E_{M}\;\vert\;^{T}HS\;E_{S}$
