--- a/hitr.tex
+++ b/hitr.tex
@@ -1,9 +1,10 @@
 \begin{figure}
 \[
-\Gamma\vdash_{H}L
+\frac{}{\Gamma\vdash_{H}L}
 \quad
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}T^{a}}
 \]
+\bigskip
 \[
 \frac{\Gamma\vdash_{S}t_{S}:TST\quad\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\;^{T}HS\;t_{S}:T[T_{i}/T^{a}_{i}]}
 \quad
