--- a/mit.tex
+++ b/mit.tex
@@ -1,11 +1,11 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$t_{M}$ & $=$ & $\cdots\;\vert\;^{T}MS\;t_{S}$ \\
-$v_{M}$ & $=$ & $\cdots\;\vert\;^{T}MH^{T}\;t_{H}\;\vert\;^{L}MS\;v_{S}\;\vert\;^{\forall X.T}MS\;v_{S}$ \\
+$e_{M}$ & $=$ & $\cdots\;\vert\;^{T}MH^{T}\;e_{H}\;\vert\;^{T}MS\;e_{S}$ \\
+$v_{M}$ & $=$ & $\cdots\;\vert\;^{L}MS\;v_{S}\;\vert\;^{\forall X.T}MS\;v_{S}$ \\
 $T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
 $a$ & $=$ & Type annotations (a, b, \ldots) \\
-$E_{M}$ & $=$ & $\cdots\;^{T}MH^{T}\;E_{H}\vert\;\vert\;^{T}MS\;E_{S}$
+$E_{M}$ & $=$ & $\cdots\;^{T}MH^{T}\;E_{H}\;\vert\;^{T}MS\;E_{S}$
 \end{tabular}
 \end{center}
 \caption{ML interoperation terms}
