--- a/sctr.tex
+++ b/sctr.tex
@@ -1,10 +1,12 @@
 \begin{figure}
 \[
-\Gamma\vdash_{S}TST
+\frac{}{\Gamma\vdash_{S}TST}
+\]
+\bigskip
+\[
+\frac{}{\Gamma\vdash_{S}\overline{n}:TST}
 \quad
-\Gamma\vdash_{S}\overline{n}:TST
-\quad
-\Gamma\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST
+\frac{}{\Gamma\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST}
 \]
 \[
 \frac{x:TST\in\Gamma}{\Gamma\vdash_{S}x:TST}
