--- a/sit.tex
+++ b/sit.tex
@@ -1,8 +1,8 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$t_{S}$ & $=$ & $\cdots\;\vert\;SM^{T}\;t_{M}$ \\
-$v_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;t_{H}\;\vert\;SM^{T^{a}}\;v_{M}$ \\
+$e_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;e_{H}\;\vert\;SM^{T}\;e_{M}$ \\
+$v_{S}$ & $=$ & $\cdots\;\vert\;SH^{T^{a}}\;e_{H}\;\vert\;SM^{T^{a}}\;v_{M}$ \\
 $E_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;E_{H}\;\vert\;SM^{T}\;E_{M}$
 \end{tabular}
 \end{center}
