--- a/hct.tex
+++ b/hct.tex
@@ -9,7 +9,7 @@ $o$ & $=$ & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
 $f$ & $=$ & $\mathtt{hd}\;\vert\;\mathtt{tl}$ \\
 $T$ & $=$ & $N\;\vert\;X\;\vert\;T\rightarrow T\;\vert\;\forall X.T\;\vert\;[T]$ \\
 $X$ & $=$ & Type variables \\
-$E_{H}$ & $=$ & $[\,]_{H}\;\vert\;E_{H}\;e_{H}\;\vert\;E_{H}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;E_{H}\;e_{H}\;e_{H}\;\vert\;o\;E_{H}\;e_{H}\;\vert\;o\;v_{H}\;E_{H}\;\vert\;f\;E_{H}\;\vert\;\mathtt{fix}\;E_{H}$
+$E_{H}$ & $=$ & $[\,]_{H}\;\vert\;E_{H}\;e_{H}\;\vert\;E_{H}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;E_{H}\;e_{H}\;e_{H}\;\vert\;o\;E_{H}\;e_{H}\;\vert\;o\;\overline{n}\;E_{H}\;\vert\;f\;E_{H}\;\vert\;\mathtt{fix}\;E_{H}$
 \end{tabular}
 \end{center}
 \caption{Haskell core terms}
