Reorganized files into model and proof dirs.

--- a/model/model.tex
+++ b/model/model.tex
@@ -1,6 +1,5 @@
 \documentclass[12pt]{article}
-\usepackage{mathrsfs}
-\usepackage{setspace}
+\usepackage{mathrsfs, setspace}
 \begin{document}
 \input{hct.tex}
 \input{hctr.tex}
